--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,17 @@
 @import 'global.scss';
 @import 'reset.scss';
 @import 'variables.scss';
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap');
+
+body {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 500;
+  font-size: 18px;
+}
+
+.container {
+  max-width: 1180px;
+  margin: 0 auto;
+  padding: 0 20px;
+}
