--- a/src/components/Table/components/TableHead/TableHead.module.scss
+++ b/src/components/Table/components/TableHead/TableHead.module.scss
@@ -1,9 +1,8 @@
+@import '../../../../styles/variables.scss';
+
 .tableHead {
   display: flex;
   justify-content: space-between;
-  position: relative;
-  padding-bottom: 77px;
-  border-bottom: 1px solid #cdcfd2;
 }
 
 .inputWrapper {
@@ -17,7 +16,7 @@
 .label {
   cursor: pointer;
   font-weight: 400;
-  color: #0d5adc;
+  color: $blue-color;
   margin-left: 14px;
 }
 
