--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -1,4 +1,4 @@
-@import '../../../../styles/variables.scss';
+@use '../../../../styles/variables.scss' as *;
 
 .header {
   padding: 42px 0;
@@ -8,8 +8,6 @@
 .wrapper {
   display: flex;
   justify-content: space-between;
-  max-width: 1140px;
-  margin: 0 auto;
 }
 
 .mainLink {
