--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,6 @@
-@import 'global.scss';
-@import 'reset.scss';
-@import 'variables.scss';
+@use 'global.scss' as *;
+@use 'reset.scss' as *;
+@use 'variables.scss' as *;
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap');
 
