upd icons & checking function

--- a/src/components/Table/components/TableHead/components/TableHeadItem/TableHeadItem.module.scss
+++ b/src/components/Table/components/TableHead/components/TableHeadItem/TableHeadItem.module.scss
@@ -4,7 +4,7 @@
 }
 
 .img {
-  max-width: 65px;
+  max-width: 100px;
   margin: 0 auto;
   height: 100px;
   width: auto;
@@ -12,4 +12,5 @@
 
 .name {
   text-align: center;
+  padding: 0 5px;
 }
