--- a/src/components/Table/components/TableHead/components/TableHeadItem/TableHeadItem.module.scss
+++ b/src/components/Table/components/TableHead/components/TableHeadItem/TableHeadItem.module.scss
@@ -27,17 +27,10 @@
 }
 
 .openPopupBtn {
-  position: relative;
   cursor: pointer;
   align-self: center;
-  &::after {
-    position: absolute;
-    content: '';
-    width: 30px;
-    height: 27px;
-    background: url('../../../../../../assets/icons/openPopup.svg');
-    background-repeat: no-repeat;
-    right: 0;
-    top: 0;
-  }
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
 }
