--- a/src/components/Popup/Popup.module.scss
+++ b/src/components/Popup/Popup.module.scss
@@ -2,6 +2,7 @@
   position: absolute;
   padding: 18px 25px;
   background-color: #fff;
+  overflow-y: auto;
   max-height: 336px;
   z-index: 100;
   top: 50px;
