--- a/src/components/Table/components/TableHead/components/TableHeadItem/TableHeadItem.module.scss
+++ b/src/components/Table/components/TableHead/components/TableHeadItem/TableHeadItem.module.scss
@@ -26,6 +26,14 @@
   padding: 0 5px;
 }
 
+.replacingPopup {
+  width: 421px;
+
+  & input {
+    width: 365px;
+  }
+}
+
 .openPopupBtn {
   cursor: pointer;
   align-self: center;
