--- a/src/components/Table/components/TableHead/components/TableHeadItem/TableHeadItem.module.scss
+++ b/src/components/Table/components/TableHead/components/TableHeadItem/TableHeadItem.module.scss
@@ -27,10 +27,11 @@
 }
 
 .replacingPopup {
-  width: 421px;
-
+  max-width: 401px;
+  left: 60px;
   & input {
     width: 365px;
+    max-width: 100%;
   }
 }
 
