--- a/src/components/Table/components/TableHead/components/TableHeadItem/components/ReplacingPopup/components/ReplacingItem/ReplacingItem.module.scss
+++ b/src/components/Table/components/TableHead/components/TableHeadItem/components/ReplacingPopup/components/ReplacingItem/ReplacingItem.module.scss
@@ -2,12 +2,14 @@
   display: flex;
   margin-bottom: 32px;
 }
+
 .btn {
   margin-right: 17px;
 }
 
 .image {
-  max-width: 40px;
-  height: 50px;
+  max-width: 36px;
+  height: 65px;
+  object-fit: cover;
   margin-right: 22px;
 }
